--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.18.0",
     "helpers": "^0.0.6",
     "mysql2": "^3.9.1",
+    "nodemon": "^3.1.9",
     "sequelize": "^6.35.2"
   }
 }
